--- a/TPsup/Finder/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/TPsup/Finder/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -63,12 +63,7 @@
     <Compile Include="Inicio.Designer.cs">
       <DependentUpon>Inicio.cs</DependentUpon>
     </Compile>
-    <Compile Include="Procesamiento.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Procesamiento.Designer.cs">
-      <DependentUpon>Procesamiento.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Polinomio.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AdvertenciaXinvalido.resx">
@@ -79,9 +74,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Procesamiento.resx">
-      <DependentUpon>Procesamiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
