--- a/TPsup/Finder/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/TPsup/Finder/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -50,6 +50,13 @@
     <Compile Include="AdvertenciaXinvalido.Designer.cs">
       <DependentUpon>AdvertenciaXinvalido.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewtonGregory.cs" />
+    <Compile Include="Newton.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Newton.Designer.cs">
+      <DependentUpon>Newton.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lagrange.cs" />
     <Compile Include="IngresoDatos.cs">
       <SubType>Form</SubType>
@@ -74,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Newton.resx">
+      <DependentUpon>Newton.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
