--- a/TPsup/Finder/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/TPsup/Finder/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Inicio.Designer.cs">
       <DependentUpon>Inicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewtonGregoryRegresivo.cs" />
     <Compile Include="Polinomio.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
